jboot v2.0.8:
优化：JbootAopFactory 在多次新增 Mapping 同一个的时候，只发出警告而不出异常。
优化：ClassScanner 扫描逻辑，使之更加易于阅读
优化：JbootAopFactory 在进行 RPC 注入的时候，如果出现异常给出具体的注入类，方便排查
优化：优化 AnnotationUtil 代码逻辑，防止在某些特殊情况可能出现空指针异常的问题


jboot v2.0.7:
新增：基于 Seata 的分布式事务，新增对 DBCP, C3P0, BoneCP, HikariCP 和 Tomcat-JDBC 连接池的支持
新增：新增 ClassUtil.buildMethodString() 方法，用于构建方法
优化：优化当使用 @CacheEvict(name="cacheName") 不指定key时，删除所有的key
优化：重构 JbootActionHandler 的错入输出代码
优化：重构 JbootDirectiveBase，当渲染文本错误时，输出行号方便排除
修复：当 RPC 修改为 Local 模式时，在某些特殊情况下无法获取服务的问题
修复：修复在多 Module 下，由于上个版本优化 ResourceLoader 导致无法正确加载其他Module静态资源的问题


jboot v2.0.6:
新增：@StaticConstruct 的支持，用于支持 AOP 自定义的静态构造
优化：优化 JbootActionHandler 代码，减少不必要的 AOP 注入
优化：优化 ClassScanner 代码，在 Tomcat 环境下排除对 Tomcat Jar 包的扫描
优化：优化 JbootUndertowConfig 代码，增加 classpath:webapp 默认设置的支持
优化：优化 JbootResourceLoader 性能，当父级不是 maven 项目的时候减少不必要的文件扫描


jboot v2.0.5:
升级 JFinal 到 3.8 最新版本


jboot v2.0.4:
优化：优化 JbootController 的 getBaseUrl 性能问题
优化：当 render 发生错误时，不方便对 Controller 方法进行定位的问题
优化：升级 druid 和 fescar 到最新版本
修复：修复 AOP 当子类为定义任何属性的时候，父类无法正常被注入的问题
修复：修复 ClassScanner 无法扫描自身的问题


jboot v2.0.3:
优化：通过注解 @EnableCORS 自定义 Option Method 的配置
优化：Dubbo Filter 在未开启 Fescar 时不执行任何操作
优化：在 代码生成器 里添加 remarks 的相关生成


jboot v2.0.2:
紧急修复不使用 Fescar 时，会出现 NoClassDefFoundError 的问题


jboot v2.0.1:
新增：Fescar 分布式事务的支持，只需要一个 @FescarGlobalTransactional 注解即可完成分布式事务，感谢 [@frank9527](https://my.oschina.net/frank9527)
新增：代码生成器的 remarks 生成的功能
优化：重构 FixedInterceptor，在其方法传入 Invocation 即可，而不是 FixedInvocation，方便拦截器在 Controller 和 Aop 层的复用。
修复：html、css、js 的热加载功能 当缺少commons-io的依赖会出错的问题
修复：@EnableCORS 开启跨域请求功能，在某些情况下不起作用的问题


jboot v2.0:
新增：Metrics 的 InfluxdbReporter 支持，方便把信息通过 influx 输入到 grafana
优化：修改 RequestUtil 工具类的拼写错误问题，isMoblieBrowser 修改为 isMobileBrowser
优化：修改 StrUtil.isMobileNumber() 新增 166 开头号码的支持
优化：大幅度优化 StrUtil.escapeHtml() 的性能
优化：升级 JFinal 到 3.7 最新版本和 JFinal-undertow 到 1.6 最新版本
修复：当使用 shiro 的时候，shiro 设置的session数据通过无法正常获取的问题


jboot v2.0-rc.13:
新增：新增 UrlParaValidate 注解，方便对 URl 参数进行验证